--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "softlab2/history",
+    "name": "softlab2/history-1",
     "description": "Eloquent model history tracking for Laravel",
     "keywords": ["laravel", "log", "history", "tracking", "eloquent", "model"],
     "homepage": "https://github.com/seancheung/history",
     "require": {
         "php": ">=5.6.4",
-        "illuminate/support": "^8.0"        
+        "illuminate/support": "^6.0"        
     },
     "license": "MIT",
     "authors": [
