--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/seancheung/history",
     "require": {
         "php": ">=5.6.4",
-        "illuminate/support": "^6.0"        
+        "illuminate/support": "^5.8|^6.0"        
     },
     "license": "MIT",
     "authors": [
